--- a/notebooks/cross_attn_sca.ipynb
+++ b/notebooks/cross_attn_sca.ipynb
@@ -157,10 +157,18 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using semantic cross-attention after!\n",
+      "512 12 72\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\agata\\AppData\\Local\\Temp\\ipykernel_21648\\3944651413.py:34: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\agata\\AppData\\Local\\Temp\\ipykernel_24044\\1231525920.py:34: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  model_weights = torch.load(model_weights_path, map_location=\"cpu\")\n"
      ]
     },
@@ -557,7 +565,7 @@
     "    num_heads=12,\n",
     "    attn_embed_dim=1536,\n",
     "    minimum_patches=1,\n",
-    "    use_semantic_cross_attn_sca=\"before\",  # tested : None/before/after\n",
+    "    use_semantic_cross_attn_sca=\"after\",  # tested : None/before/after\n",
     "    semantic_embed_dim=512,\n",
     ")\n",
     "\n",
@@ -1518,10 +1526,14 @@
     "print(f\"Number of parameters in the new model: {sum(p.numel() for p in model.parameters())}\")\n",
     "\n",
     "# freeze only the original model weights (not the new ones) - the new ones are trainable\n",
+    "# also leave the classification head trainable\n",
     "for name, param in model.named_parameters():\n",
     "\tif name in model_weights:\n",
     "\t\t# print(f\"Freezing {name}\")\n",
-    "\t\tparam.requires_grad = False"
+    "\t\tparam.requires_grad = False\n",
+    "\tif \"cls_head\" in name:\n",
+    "\t\tparam.requires_grad = True\n",
+    "\t\t# print(f\"Unfreezing {name}\")"
    ]
   },
   {
@@ -1552,21 +1564,21 @@
        "├─LayerNorm: 1-6                                                                      (144)\n",
        "├─ClassificationHead: 1-7                                                             --\n",
        "│    └─Sequential: 2-6                                                                --\n",
-       "│    │    └─Linear: 3-3                                                               (15,768)\n",
+       "│    │    └─Linear: 3-3                                                               15,768\n",
        "│    │    └─ReLU: 3-4                                                                 --\n",
        "│    │    └─Dropout: 3-5                                                              --\n",
-       "│    │    └─Linear: 3-6                                                               (46,872)\n",
+       "│    │    └─Linear: 3-6                                                               46,872\n",
        "│    │    └─ReLU: 3-7                                                                 --\n",
        "│    │    └─Dropout: 3-8                                                              --\n",
-       "│    │    └─Linear: 3-9                                                               (217)\n",
+       "│    │    └─Linear: 3-9                                                               217\n",
        "├─MultiheadAttention: 1-8                                                             15,768\n",
        "│    └─NonDynamicallyQuantizableLinear: 2-7                                           5,256\n",
        "├─Linear: 1-9                                                                         36,936\n",
        "├─LayerNorm: 1-10                                                                     144\n",
        "==============================================================================================================\n",
        "Total params: 172,213,010\n",
-       "Trainable params: 58,104\n",
-       "Non-trainable params: 172,154,906\n",
+       "Trainable params: 120,961\n",
+       "Non-trainable params: 172,092,049\n",
        "=============================================================================================================="
       ]
      },
