Something that runs- patch level fusion

--- a/notebooks/test_forward.ipynb
+++ b/notebooks/test_forward.ipynb
@@ -437,8 +437,7 @@
     "print(\"Loading configuration...\")\n",
     "config = get_config({\"cfg\": \"configs/spai.yaml\"})\n",
     "config.defrost()\n",
-    "config.MODEL.FRE.USE_SEMANTIC_FUSION = True\n",
-    "config.MODEL_WEIGHTS = \"clip\"  # Use CLIP backbone for semantic features\n",
+    "config.MODEL_WEIGHTS = \"dinov2\"  # Use CLIP backbone for semantic features\n",
     "config.freeze()\n",
     "\n",
     "print(\"\\nCreating model...\")\n",
